[project]
name = "PandaModelsBackend"
version = "0.0.1"
description = "A PowerModels Backend for Grid2Op using PandaModels"
authors = [
    { name = "Ketan Bhardwaj", email = "ketanbj@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

[project.urls]
repository = "https://github.com/gt-sse-center/PandaModelsBackend"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
    "pip"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools]
